--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div class="hero width-1350">
-        <nav id="navbar" class="navbar width-1350 flex">
+        <div class="">
+            <nav id="navbar" class="navbar width-1350 flex">
             <div class="nav-logo flex">
                 <img src="https://res.cloudinary.com/diaolchke/image/upload/v1676430410/my%20portfolio/mylogo_lyiwz8.png" alt="site-logo">
             </div>
@@ -29,10 +30,10 @@
             </ul>
             
         </nav>
+        </div>
         <section id="welcome-section"  class="width-1350 height-100 flex">
             <nav>
                 <nav>
-                    <h1>f</h1>
                     <p class="self-intro">Hi! I am <span class="my-name">Keth Dominic Tacatani</span></p>
             <p class="tag-line">Your partner in building scalable, reliable software</p>
                 <img class="model" src="./formal attire id bg.png" alt="my pic">
@@ -81,8 +82,8 @@
             <p class="section-title flex">About me</p>
             <div class="about-me flex">
                 <div class="about-me-text">
-                    <p class="quote"><span class="double-quote">"</span>Hi there, I'm Keth Dominic Tacatani! I'm currently a third-year college student pursuing a degree in Computer Science. As a tech-savvy person, I'm always excited to learn about the latest technological advancements and how they can be used to improve our lives. In my free time, I enjoy tinkering with code, exploring new programming languages, and developing my own projects
-                    <p class="quote"> Thank you for taking the time to learn a bit about me! I'm excited to see how we can work together to bring your project to life.<span class="double-quote">"</span></p>
+                    <p class="quote"><span class="double-quote">"</span>Hi there, I'm Keth Dominic Tacatani! I'm currently a third-year college student pursuing a degree in Computer Science. As a tech-savvy person, I'm always excited to learn about the latest technological advancements and how they can be used to improve our lives. In my free time, I enjoy tinkering with code, exploring new programming languages, and developing my own projects <br> &nbsp
+                     Thank you for taking the time to learn a bit about me! I'm excited to see how we can work together to bring your project to life.<span class="double-quote">"</span></p>
 
 
                 </div>
