--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
         <nav id="navbar" class="navbar flex">
             <div class="nav-logo flex">
-                <img src="./mylogo.png" alt="site-logo">
+                <img src="images/mylogo.png" alt="site-logo">
             </div>
             <div class="menu-container" onclick="menuFunction(this)">
                 <div class="bar1"></div>
@@ -36,7 +36,7 @@
                 <nav class="welcome-page">
                     <p class="self-intro">Hi! I am <span class="my-name">Keth Dominic Tacatani</span></p>
                     <p class="tag-line">Your partner in building scalable, reliable software</p>
-                <img class="model" src="./formal attire id bg.png" alt="my pic">
+                <img class="model" src="images/formal attire id bg.png" alt="my pic">
             </nav>
         </section>
         <section id="projects" class="">
@@ -45,7 +45,7 @@
             <div class="project-container">
                 <div class="project flex">
                     <div class="project-pics project-tile">
-                        <img src="./project1.png" alt="home screen">
+                        <img src="images/project1.png" alt="home screen">
                         
                     </div>
                     <div class="project-description">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="project flex">
                     <div class="project-pics ">
-                        <img class="trading-img-1" src="./trading-calc.png" alt="trading-wr" >
+                        <img class="trading-img-1" src="images/trading-calc.png" alt="trading-wr" >
                     </div>
                     <div class="project-description">
                         <span class="project-name project-title">Win Rate Calculator for Trading</span>
@@ -88,7 +88,7 @@
 
                 </div>
                 <div>
-                    <img class="about-image" src="./mypic.png" alt="">
+                    <img class="about-image" src="images/mypic.png" alt="">
                 </div>
             </div>
         </section>
@@ -96,16 +96,16 @@
             <p class="section-title flex">Contact</p>
             <div class="contact-container flex">
                 <div >
-                    <a id="profile-link" href="mailto:kethtacatani@gmail.com" target="_blank"><img class="contact-logo" src="./email.png" alt="email"></a>
+                    <a id="profile-link" href="mailto:kethtacatani@gmail.com" target="_blank"><img class="contact-logo" src="images/email.png" alt="email"></a>
                     <p>Email</p>
                 </div>
                 <div >
-                    <a href="https://github.com/suturoberi" target="_blank"><img class="contact-logo" src="./github.png" alt="github"></a>
+                    <a href="https://github.com/suturoberi" target="_blank"><img class="contact-logo" src="images/github.png" alt="github"></a>
                     <p>Github</p>
         
                 </div>
                 <div >
-                    <a href="https://www.linkedin.com/in/keth-dominic-tacatani-11566a164/" target="_blank"><img class="contact-logo" src="./linkedin.png" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/keth-dominic-tacatani-11566a164/" target="_blank"><img class="contact-logo" src="images/linkedin.png" alt="github"></a>
                     <p>LinkedIn</p>
                 </div>
             </div>
