--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <p class="section-title flex">About me</p>
             <div class="about-me flex">
                 <div class="about-me-text">
-                    <p class="quote"><span class="double-quote">"</span>Hi there, I'm Keth Dominic Tacatani! I'm currently a third-year college student pursuing a degree in Computer Science. As a tech-savvy person, I'm always excited to learn about the latest technological advancements and how they can be used to improve our lives. In my free time, I enjoy tinkering with code, exploring new programming languages, and developing my own projects <br> t
-                     Thank you for taking the time to learn a bit about me! I'm excited to see how we can work together to bring your project to life.<span class="double-quote">"</span></p>
+                    <p class="quote"><span class="double-quote">"</span>Hi there, I'm Keth Dominic Tacatani! I'm currently a third-year college student pursuing a degree in Computer Science. As a tech-savvy person, I'm always excited to learn about the latest technological advancements and how they can be used to improve our lives. In my free time, I enjoy tinkering with code, exploring new programming languages, and developing my own projects <br>
+                     &nbsp&nbsp&nbspThank you for taking the time to learn a bit about me! I'm excited to see how we can work together to bring your project to life.<span class="double-quote">"</span></p>
 
 
                 </div>
