--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>Email</p>
                 </div>
                 <div >
-                    <a href="https://github.com/suturoberi" target="_blank"><img class="contact-logo" src="images/github.png" alt="github"></a>
+                    <a href="https://github.com/kethtacatani" target="_blank"><img class="contact-logo" src="images/github.png" alt="github"></a>
                     <p>Github</p>
         
                 </div>
