--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <nav class="welcome-page">
                     <p class="self-intro">Hi! I am <span class="my-name">Keth Dominic Tacatani</span></p>
                     <p class="tag-line">Your partner in building scalable, reliable software</p>
-                <img class="model" src="images/formal attire id bg.png" alt="my pic">
+                <img class="model" src="images/formal attire id bg.png" alt="my picture">
             </nav>
         </section>
         <section id="projects" class="">
