--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <nav class="welcome-page">
                     <p class="self-intro">Hi! I am <span class="my-name">Keth Dominic Tacatani</span></p>
                     <p class="tag-line">Your partner in building scalable, reliable software</p>
-                <img class="model" src="images/formal attire id bg.png" alt="my pic">
+                <img class="model" src="images/formal attire id bg.png" alt="my picture">
             </nav>
         </section>
         <section id="projects" class="">
@@ -105,7 +105,7 @@
                     <p>Email</p>
                 </div>
                 <div >
-                    <a href="https://github.com/kethtacatani" target="_blank"><img class="contact-logo" src="images/github.png" alt="github"></a>
+                    <a href="https://github.com/suturoberi" target="_blank"><img class="contact-logo" src="images/github.png" alt="github"></a>
                     <p>Github</p>
         
                 </div>
